--- a/meteorology/Main.storyboard
+++ b/meteorology/Main.storyboard
@@ -373,13 +373,13 @@
         <!--我的帖子-->
         <scene sceneID="g46-br-cem">
             <objects>
-                <tableViewController id="rBD-vt-JG3" customClass="ProfBBSViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="rBD-vt-JG3" customClass="ProfTopicViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="4Qq-HH-KVT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" rowHeight="124" id="Ifc-0Y-m3K">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="topiccell" rowHeight="124" id="Ifc-0Y-m3K">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ifc-0Y-m3K" id="qlD-AG-J43">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -472,13 +472,13 @@
         <!--我的词条-->
         <scene sceneID="xIJ-qA-a3x">
             <objects>
-                <tableViewController id="cZN-nb-2KE" customClass="ProfTopicViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="cZN-nb-2KE" customClass="ProfSubjectViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="mTS-O1-BYL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="116" id="3uj-es-u3M">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="subjectcell" rowHeight="116" id="3uj-es-u3M">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3uj-es-u3M" id="IsW-PY-8tM">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -556,13 +556,13 @@
         <!--我的回复-->
         <scene sceneID="dE0-5H-w2D">
             <objects>
-                <tableViewController id="jg7-XF-cXB" customClass="ProfMsgViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="jg7-XF-cXB" customClass="ProfReplyViewController" customModule="meteorology" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="JlY-tz-WUl">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="90" id="2cr-fV-Vb8">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="replycell" rowHeight="90" id="2cr-fV-Vb8">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2cr-fV-Vb8" id="TYV-rX-Lwv">
